# xapian_model

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/xapian_model/: __init__.py  base.py
src/xprofile/: schemas.py  xprofile.py
tests/: __init__.py  conftest.py  test_base.py  test_integration.py
